<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity_C">

    <ImageView
        android:layout_marginTop="50dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/denis"
        android:scaleType="centerCrop"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:gravity="center"
        android:textSize="25sp"
        android:padding="5dp"
        android:textColor="#333"/>

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#111"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:weightSum="10">

        <TextView
            android:layout_weight="3"
            style="@style/TextStyle"
            android:text="@string/track"/>

        <TextView
            android:layout_weight="7"
            style="@style/TextStyle"
            android:text="@string/android"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:padding="10dp"
        android:weightSum="10">

        <TextView
            android:layout_weight="3"
            style="@style/TextStyle"
            android:text="@string/country"/>

        <TextView
            android:layout_weight="7"
            style="@style/TextStyle"
            android:text="@string/uganda"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:padding="10dp"
        android:weightSum="10">

        <TextView
            android:layout_weight="3"
            style="@style/TextStyle"
            android:text="@string/my_email"/>

        <TextView
            android:layout_weight="7"
            style="@style/TextStyle"
            android:text="@string/olukadeno"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:padding="10dp"
        android:weightSum="10">

        <TextView
            android:layout_weight="5"
            style="@style/TextStyle"
            android:text="@string/phone_number"/>

        <TextView
            android:layout_weight="5"
            style="@style/TextStyle"
            android:text="@string/_0773047940"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:padding="10dp"
        android:weightSum="10">

        <TextView
            android:layout_weight="5"
            style="@style/TextStyle"
            android:text="@string/slack_username"/>

        <TextView
            android:layout_weight="5"
            style="@style/TextStyle"
            android:text="@string/slack_name"/>
    </LinearLayout>

</LinearLayout>