<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <TextView
       android:layout_weight="3"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:text="@string/welcome_alc"
       android:gravity="center"
       android:textStyle="bold"
       android:textColor="@android:color/black"
       android:textSize="30sp"
       android:layout_marginTop="40dp"/>

    <LinearLayout
        android:layout_weight="7"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_alc"
            android:layout_marginTop="60dp"
            android:background="@color/button_color"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btn_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_profile"
            android:layout_marginTop="50dp"
            android:background="@color/button_color"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>

    </LinearLayout>

</LinearLayout>